syntax = "proto3";

package algotrader.model;



message TimeSeries{

    message Item{
        int64 timestamp = 1;
        map<string, double> data = 3;
    }
    string series_id = 1;
    string series_cls = 2;
    string name = 3;
    string desc = 4;
    repeated string inputs = 5;
    repeated string keys = 6;
    string default_output_key = 7;
    double missing_value_replace = 8;
    int64 start_time = 9;
    int64 end_time = 10;
    repeated Item items = 11;
}

